syntax = "proto3";
package manager;

import "google/protobuf/empty.proto";

option go_package = ".;manager";

// 用户服务定义
service Manager {
    // 注册方法
    rpc Register (RegisterRequest) returns (RegisterResponse) {};
    // 心跳方法
    rpc Heartbeat (HeartbeatRequest) returns (google.protobuf.Empty);

    rpc ReportCompleteFile (CompleteFileRequest) returns (google.protobuf.Empty);

    rpc SchedulerFile (SchedulerFileRequest) returns (SchedulerFileResponse);

}


// 注册请求
message RegisterRequest {
string areaInstance = 1;
string host = 2;
int32 port = 3;
}

// 注册响应
message RegisterResponse {
    int32 id = 1;
    bool success = 2;
}

// 心跳请求
message HeartbeatRequest {
    int32 id = 1;
}

message CompleteFileRequest {
   repeated CompleteFile completeFiles = 1;
}

message CompleteFile{
    string dataType = 1;
    string org = 2;
    string repo = 3;
    string etag = 4;
    string areaInstance = 5;
}

message SchedulerFileRequest {
    string dataType = 1;
    string org = 2;
    string repo = 3;
    string etag = 4;
}

// 注册响应
message SchedulerFileResponse {
    string host = 1;
    int32 port = 2;
}